yamls/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: wil
spec:
  selector:
    matchLabels:
      app: wil
  template:
    metadata:
      labels:
        app: wil
    spec:
      containers:
        - name: wil
          image: wil42/playground:v1
          ports:
            - containerPort: 8888
